--- a/installer/mac/config/mixer-api/drone_config_0.json
+++ b/installer/mac/config/mixer-api/drone_config_0.json
@@ -2,20 +2,20 @@
   "name": "DroneTransporter",
   "simulation": {
     "lockstep": true,
-    "timeStep": 0.001,
+    "timeStep": 0.003,
     "logOutputDirectory": ".",
     "logOutput": {
       "sensors": {
-          "acc": true,
-          "gyro": true,
-          "mag": true,
-          "baro": true,
-          "gps": true    
+        "acc": true,
+        "gyro": true,
+        "mag": true,
+        "baro": true,
+        "gps": true
       },
       "mavlink": {
-          "hil_sensor": true,
-          "hil_gps": true,
-          "hil_actuator_controls": true
+        "hil_sensor": true,
+        "hil_gps": true,
+        "hil_actuator_controls": true
       }
     },
     "mavlink_tx_period_msec": {
@@ -30,69 +30,117 @@
         "intensity_nT": 53045.1,
         "declination_deg": 15.306,
         "inclination_deg": 68.984
-      }  
+      }
     }
   },
   "components": {
     "droneDynamics": {
-        "physicsEquation": "BodyFrameRK4",
-        "collision_detection": true,
-        "manual_control": false,
-        "airFrictionCoefficient": [ 0.05, 0 ],
-        "inertia": [ 6.1e-03, 6.53e-03, 1.16e-02 ],
-        "mass_kg": 0.71,
-        "body_size": [ 0.1, 0.1, 0.01 ],
-        "position_meter": [ 0, 0, 0 ],
-        "angle_degree": [ 0, 0, 0 ]
-      },
-      "rotor": {
-        "vendor": "None",
-        "Tr": 1.93e-02,
-        "Kr": 2896,
-        "rpmMax": 2896
-      },
-      "thruster": {
-        "vendor": "None",
-        "rotorPositions": [
-          {"position": [  0.103,  0.103, 0 ], "rotationDirection":  1.0 },
-          {"position": [ -0.103, -0.103, 0 ], "rotationDirection":  1.0 },
-          {"position": [  0.103, -0.103, 0 ], "rotationDirection": -1.0 },
-          {"position": [ -0.103,  0.103, 0 ], "rotationDirection": -1.0 }
+      "physicsEquation": "BodyFrame",
+      "collision_detection": true,
+      "manual_control": false,
+      "airFrictionCoefficient": [
+        0.05,
+        0
+      ],
+      "inertia": [
+        0.0061,
+        0.00653,
+        0.0116
+      ],
+      "mass_kg": 0.71,
+      "body_size": [
+        0.1,
+        0.1,
+        0.01
+      ],
+      "position_meter": [
+        0,
+        0,
+        0
+      ],
+      "angle_degree": [
+        0,
+        0,
+        0
+      ]
+    },
+    "rotor": {
+      "vendor": "None",
+      "Tr": 0.0193,
+      "Kr": 2896,
+      "rpmMax": 2896
+    },
+    "thruster": {
+      "vendor": "None",
+      "rotorPositions": [
+        {
+          "position": [
+            0.103,
+            0.103,
+            0
           ],
-        "HoveringRpm": 1448,
-        "parameterB":  3.0e-08,
-        "parameterJr": 0.0
-      },
-      "sensors": {
-          "acc": {
-            "sampleCount": 1,
-            "noise": 0.03
-          },
-          "gyro": {
-            "sampleCount": 1,
-            "noise": 0.0
-          },
-          "mag": {
-            "sampleCount": 1,
-            "noise": 0.03
-          },
-          "baro": {
-            "sampleCount": 1,
-            "noise": 0.01
-          },
-          "gps": {
-            "sampleCount": 1,
-            "noise": 0
-          }
+          "rotationDirection": 1.0
+        },
+        {
+          "position": [
+            -0.103,
+            -0.103,
+            0
+          ],
+          "rotationDirection": 1.0
+        },
+        {
+          "position": [
+            0.103,
+            -0.103,
+            0
+          ],
+          "rotationDirection": -1.0
+        },
+        {
+          "position": [
+            -0.103,
+            0.103,
+            0
+          ],
+          "rotationDirection": -1.0
         }
+      ],
+      "HoveringRpm": 1448,
+      "parameterB": 3.0E-8,
+      "parameterJr": 0.0
+    },
+    "sensors": {
+      "acc": {
+        "sampleCount": 1,
+        "noise": 0.03
+      },
+      "gyro": {
+        "sampleCount": 1,
+        "noise": 0.0
+      },
+      "mag": {
+        "sampleCount": 1,
+        "noise": 0.03
+      },
+      "baro": {
+        "sampleCount": 1,
+        "noise": 0.01
+      },
+      "gps": {
+        "sampleCount": 1,
+        "noise": 0
+      }
+    }
   },
   "controller": {
-    "moduleDirectory": "../src/drone_control/cmake-build/workspace/FlightController",
-    "moduleName": "FlightController",
+    "moduleDirectory": "../src/drone_control/cmake-build/workspace/RadioController",
+    "moduleName": "RadioController",
+    "direct_rotor_control": false,
     "mixer": {
-      "vendor": "linear",
+      "vendor": "None",
       "enableDebugLog": false,
-      "enableErrorLog": true
+      "enableErrorLog": false
     }
   }
 }
