--- a/src/drone_evaluation/template/drone_config.json
+++ b/src/drone_evaluation/template/drone_config.json
@@ -155,7 +155,7 @@
       "moduleName": "PlantController",
       "direct_rotor_control": true,
       "mixer": {
-        "vendor": "linear",
+        "vendor": "None",
         "enableDebugLog": false,
         "enableErrorLog": false
       }
