--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -75,7 +75,8 @@ RUN HAKO_CORE_BUILD_DIR=cmake-build/third-party/hakoniwa-core-cpp-client && \
     cp ${HAKO_CORE_BUILD_DIR}/src/hakoc/libshakoc.* ${ROOT_DIR}/usr/local/lib/hakoniwa/hakoc.so && \
     cp ${HAKO_CORE_BUILD_DIR}/src/assets/libassets.* ${ROOT_DIR}/usr/local/lib/hakoniwa/ && \
     cp ${HAKO_CORE_BUILD_DIR}/src/conductor/libconductor.* ${ROOT_DIR}/usr/local/lib/hakoniwa/ && \
-    cp ${HAKO_CORE_BUILD_DIR}/bindings/python/libhako_asset_python.so ${ROOT_DIR}/usr/local/lib/hakoniwa/py/hakopy.so
+    cp ${HAKO_CORE_BUILD_DIR}/bindings/python/libhako_asset_python.so ${ROOT_DIR}/usr/local/lib/hakoniwa/py/hakopy.so && \
+    cp /root/workspace/hakoniwa-px4sim/hakoniwa/third-party/hakoniwa-core-cpp-client/core/cpp_core_config.json ${ROOT_DIR}/etc/hakoniwa/cpp_core_config.json
 
 # Install headers and Python bindings
 WORKDIR /root/workspace
